--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <section class="presentation">
       <h1 class="titlePres">MARKETING SERVICES</h1>
-      <h3 class="titlePres2">XX</h3>
+      <h3 class="titlePres2"></h3>
   </section>
   
   <!-- text section -->
@@ -96,8 +96,7 @@
             <h2 class="titleMiddle"> <span class="importantText"> Social Media</span> Marketing 
             </h2>
             <p class="textMiddle">If your real estate agent is an influencer on social media, he or she has access to thousands of niche buyers who are ready to invest in property. To be an influencer, an agent either needs to dedicate a large chunk of their time to social media or they need to partner with luxury real estate marketing service providers who can put in the work for them. Wouldn’t you rather your agent spent his or her time marketing your property and let an expert handle their social media presence?</p>
-            <h6 class="importantText2">At Luxury Presence, our dedicated success team utilizes an agent’s stories and feed posts to help them go viral and become an authority in their industry. Once they’ve harnessed the power of becoming an influencer, they can use their voice to advocate for your home and sell it more quickly than their competitors.
-            </h6>
+            
        
         </article>
     </section>
